fix: 修复图像生成模型问题
- 移除不可用的 gpt-image 模型
- 添加 kontext 模型选项
- 更新前端模型选择器
- 同步更新多语言文件
- 基于实际API可用模型列表更新

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -595,7 +595,7 @@
                         <select id="option-ai-model" name="option-ai-model">
                             <option value="flux" selected data-i18n="aiModelFlux">FLUX - High Quality Art Creation</option>
                             <option value="turbo" data-i18n="aiModelTurbo">Turbo - Fast Generation</option>
-                            <option value="gpt-image" data-i18n="aiModelGptImage">GPT Image - Latest High Precision Model</option>
+                            <option value="kontext" data-i18n="aiModelKontext">Kontext - Image-to-Image Generation</option>
                         </select>
                         <small class="model-hint" data-i18n="modelHint">💡 Different models suit different scenarios: FLUX for art creation, Turbo for fast prototyping, GPT Image for high precision needs</small>
                     </div>
