--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,22 @@
 <head>
     <!-- 全局函数必须最先定义 -->
     <script>
+        // API Base配置（可从localStorage覆盖）
+        (function(){
+            try {
+                var saved = localStorage.getItem('api_base');
+                if (saved && typeof saved === 'string' && saved.trim()) {
+                    window.API_BASE = saved.trim();
+                }
+            } catch (e) { /* 忽略 */ }
+            window.setApiBase = function(url){
+                if (typeof url === 'string' && url.trim()) {
+                    window.API_BASE = url.trim();
+                    try { localStorage.setItem('api_base', window.API_BASE); } catch(e){}
+                }
+            };
+        })();
+
         // 全局模态框控制函数
         function showModal(modalId) {
             const modal = document.getElementById(modalId);
