feat(google-callback): exchange code in callback, persist token+user locally; robust postMessage fallback

--- a/frontend/auth/google/callback.html
+++ b/frontend/auth/google/callback.html
@@ -50,6 +50,35 @@
         const error = urlParams.get('error');
         const state = urlParams.get('state');
 
+        // 读取 API_BASE（与站点一致），否则回退到已部署的 Workers
+        function getApiBase() {
+            try {
+                const saved = localStorage.getItem('api_base');
+                if (saved && saved.trim()) return saved.trim().replace(/\/$/, '') + '/api';
+            } catch (_) {}
+            return 'https://text2image-api.peyoba660703.workers.dev/api';
+        }
+
+        function writeTokenAndUser(token, user) {
+            try { localStorage.setItem('auth_token', token); } catch(_){}
+            try { localStorage.setItem('user_info', JSON.stringify(user)); } catch(_){}
+            try {
+                const isHTTPS = location.protocol === 'https:';
+                const attrs = [
+                    'auth_token=' + encodeURIComponent(token),
+                    'path=/',
+                    'max-age=' + (7*24*60*60)
+                ];
+                const parts = location.hostname.split('.');
+                if (parts.length >= 2 && !/^\d+\.\d+\.\d+\.\d+$/.test(location.hostname)) {
+                    const apex = parts.slice(-2).join('.');
+                    attrs.push('domain=.' + apex);
+                }
+                if (isHTTPS) { attrs.push('Secure'); attrs.push('SameSite=None'); } else { attrs.push('SameSite=Lax'); }
+                document.cookie = attrs.join('; ');
+            } catch(_){}
+        }
+
         if (error) {
             // 登录错误
             if (window.opener) {
@@ -62,16 +91,39 @@
             }
             window.close();
         } else if (code) {
-            // 登录成功，发送授权码
-            if (window.opener) {
+            // 优先：回调页直接与后端交换 code 获取 JWT，写入本地，再通知父窗口
+            (async () => {
                 try {
-                    window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, window.location.origin);
-                } catch(_) {
-                    // 回退到通配，最大化送达
-                    window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, '*');
+                    const api = getApiBase();
+                    const resp = await fetch(api + '/auth/google-oauth', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({ code, state })
+                    });
+                    const data = await resp.json().catch(() => ({}));
+                    if (resp.ok && data && data.success && data.token) {
+                        writeTokenAndUser(data.token, data.user);
+                        if (window.opener) {
+                            try { window.opener.postMessage({ type: 'GOOGLE_AUTH_LOGIN_READY' }, window.location.origin); }
+                            catch(_) { window.opener.postMessage({ type: 'GOOGLE_AUTH_LOGIN_READY' }, '*'); }
+                        }
+                    } else {
+                        // 回退到仅发送 code 的老路径
+                        if (window.opener) {
+                            try { window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, window.location.origin); }
+                            catch(_) { window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, '*'); }
+                        }
+                    }
+                } catch (e) {
+                    // 失败则回退到仅发送 code
+                    if (window.opener) {
+                        try { window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, window.location.origin); }
+                        catch(_) { window.opener.postMessage({ type: 'GOOGLE_AUTH_SUCCESS', code, state }, '*'); }
+                    }
+                } finally {
+                    window.close();
                 }
-            }
-            window.close();
+            })();
         } else {
             // 未知状态
             if (window.opener) {
