fix: 增强错误过滤机制，屏蔽浏览器扩展content.js错误
- 添加对content.js和extension相关错误的过滤
- 防止浏览器扩展的toLowerCase错误污染控制台
- 提升开发和用户体验，减少无关错误干扰

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,12 +52,15 @@
                     try {
                         const msg = (e && e.message || '').toLowerCase();
                         const file = (e && e.filename) || '';
-                        if (
-                            msg.includes('net::err_connection_closed') ||
-                            msg.includes("can't read properties of undefined (reading 'tolowercase')") ||
-                            msg.includes('tolowercase') ||
-                            noisyHosts.some(h => file.includes(h))
-                        ) {
+                                        if (
+                    msg.includes('net::err_connection_closed') ||
+                    msg.includes("can't read properties of undefined (reading 'tolowercase')") ||
+                    msg.includes('tolowercase') ||
+                    msg.includes('content.js') ||
+                    file.includes('content.js') ||
+                    file.includes('extension') ||
+                    noisyHosts.some(h => file.includes(h))
+                ) {
                             e.preventDefault && e.preventDefault();
                             return true;
                         }
