--- a/frontend/index.html
+++ b/frontend/index.html
@@ -503,9 +503,12 @@
         </div>
         <ul class="navbar-menu">
             <li><a href="#home">Home</a></li>
-            <li><a href="/about.html" id="about-link">About</a></li>
-            <li><a href="/services.html" id="services-link">Services</a></li>
-            <li><a href="/contact.html" id="contact-link">Contact</a></li>
+            <li><a href="image-generator.html">图片生成</a></li>
+            <li><a href="voice-generator.html">语音合成</a></li>
+            <li><a href="tutorial.html">使用教程</a></li>
+            <li><a href="faq.html">常见问题</a></li>
+            <li><a href="about.html" id="about-link">关于我们</a></li>
+            <li><a href="contact.html" id="contact-link">联系我们</a></li>
         </ul>
         <div class="navbar-right">
             <select id="lang-select" class="lang-select">
