--- a/frontend/user.html
+++ b/frontend/user.html
@@ -100,10 +100,13 @@
       <span class="site-name">AISTONE</span>
     </div>
     <ul class="navbar-menu">
-      <li><a href="/index.html#home" data-i18n="navHome">首页</a></li>
-      <li><a href="/about.html" id="about-link" data-i18n="navAbout">关于</a></li>
-      <li><a href="/services.html" id="services-link" data-i18n="navServices">服务</a></li>
-      <li><a href="/contact.html" id="contact-link" data-i18n="navContact">联系</a></li>
+      <li><a href="index.html#home" data-i18n="navHome">首页</a></li>
+      <li><a href="image-generator.html">图片生成</a></li>
+      <li><a href="voice-generator.html">语音合成</a></li>
+      <li><a href="tutorial.html">使用教程</a></li>
+      <li><a href="faq.html">常见问题</a></li>
+      <li><a href="about.html" id="about-link" data-i18n="navAbout">关于</a></li>
+      <li><a href="contact.html" id="contact-link" data-i18n="navContact">联系</a></li>
     </ul>
     <div class="navbar-right">
       <select id="lang-select" class="lang-select">
