--- a/frontend/ai-guide.html
+++ b/frontend/ai-guide.html
@@ -133,21 +133,21 @@
                         </ul>
                     </div>
 
-                    <h3>核心技术原理</h3>
-                    <p><strong>扩散模型（Diffusion Models）</strong>是目前最主流的AI图像生成技术。它模仿物理学中的扩散过程：</p>
+                    <h3 data-i18n="aiGuideCoreTechTitle">核心技术原理</h3>
+                    <p data-i18n="aiGuideCoreTechDesc"><strong>扩散模型（Diffusion Models）</strong>是目前最主流的AI图像生成技术。它模仿物理学中的扩散过程：</p>
                     <ol>
-                        <li><strong>正向过程：</strong>将清晰图像逐步添加噪声，直到变成纯噪声</li>
-                        <li><strong>逆向过程：</strong>AI学会从噪声中逐步去噪，重构出有意义的图像</li>
-                        <li><strong>条件控制：</strong>通过文本编码器将提示词转换为数学向量，引导生成过程</li>
+                        <li><strong data-i18n="aiGuideForwardProcess">正向过程：</strong><span data-i18n="aiGuideForwardProcessDesc">将清晰图像逐步添加噪声，直到变成纯噪声</span></li>
+                        <li><strong data-i18n="aiGuideReverseProcess">逆向过程：</strong><span data-i18n="aiGuideReverseProcessDesc">AI学会从噪声中逐步去噪，重构出有意义的图像</span></li>
+                        <li><strong data-i18n="aiGuideConditionalControl">条件控制：</strong><span data-i18n="aiGuideConditionalControlDesc">通过文本编码器将提示词转换为数学向量，引导生成过程</span></li>
                     </ol>
 
                     <div class="info-box">
-                        <h4>💡 技术优势</h4>
+                        <h4 data-i18n="aiGuideTechAdvantagesTitle">💡 技术优势</h4>
                         <ul>
-                            <li><strong>高质量输出：</strong>能够生成8K分辨率的专业级图像</li>
-                            <li><strong>风格多样性：</strong>支持摄影、绘画、插画等各种艺术风格</li>
-                            <li><strong>创意无限：</strong>可以创造现实中不存在的场景和概念</li>
-                            <li><strong>成本效益：</strong>大幅降低视觉内容创作的时间和成本</li>
+                            <li><strong data-i18n="aiGuideHighQuality">高质量输出：</strong><span data-i18n="aiGuideHighQualityDesc">能够生成8K分辨率的专业级图像</span></li>
+                            <li><strong data-i18n="aiGuideStyleDiversity">风格多样性：</strong><span data-i18n="aiGuideStyleDiversityDesc">支持摄影、绘画、插画等各种艺术风格</span></li>
+                            <li><strong data-i18n="aiGuideUnlimitedCreativity">创意无限：</strong><span data-i18n="aiGuideUnlimitedCreativityDesc">可以创造现实中不存在的场景和概念</span></li>
+                            <li><strong data-i18n="aiGuideCostEffective">成本效益：</strong><span data-i18n="aiGuideCostEffectiveDesc">大幅降低视觉内容创作的时间和成本</span></li>
                         </ul>
                     </div>
                 </section>
