--- a/frontend/tutorial.html
+++ b/frontend/tutorial.html
@@ -63,7 +63,7 @@
                 <span class="separator">></span>
                 <span class="current">使用教程</span>
             </nav>
-            <h1>使用教程</h1>
+            <h1 data-i18n="relatedTutorialTitle">📖 快速上手</h1>
             <div class="tutorial-content">
 
                 <section class="tutorial-intro">
@@ -74,16 +74,16 @@
                 <section class="tutorial-section">
                     <h2>1. 快速开始</h2>
                     <div class="tutorial-step">
-                        <h3>步骤1：访问平台</h3>
-                        <p>打开浏览器访问 <a href="https://aistone.org">https://aistone.org</a>，无需注册即可开始使用。</p>
+                        <h3 data-i18n="tutorialStep1Title">步骤1：访问平台</h3>
+                        <p data-i18n="tutorialStep1Desc">打开浏览器访问 <a href="https://aistone.org">https://aistone.org</a>，无需注册即可开始使用。</p>
                     </div>
 
                     <div class="tutorial-step">
-                        <h3>步骤2：选择生成类型</h3>
-                        <p>在页面上选择您想要生成的内容类型：</p>
+                        <h3 data-i18n="tutorialStep2Title">步骤2：选择生成类型</h3>
+                        <p data-i18n="tutorialStep2Desc">在页面上选择您想要生成的内容类型：</p>
                         <ul>
-                            <li><strong>生成图片：</strong>将文本描述转换为高质量图片</li>
-                            <li><strong>生成语音：</strong>将文本转换为自然流畅的语音</li>
+                            <li><strong data-i18n="tutorialImageGen">生成图片：</strong><span data-i18n="tutorialImageGenDesc">将文本描述转换为高质量图片</span></li>
+                            <li><strong data-i18n="tutorialVoiceGen">生成语音：</strong><span data-i18n="tutorialVoiceGenDesc">将文本转换为自然流畅的语音</span></li>
                         </ul>
                     </div>
 
