--- a/frontend/services.html
+++ b/frontend/services.html
@@ -15,20 +15,21 @@
             <span class="site-name">AISTONE</span>
         </div>
         <ul class="navbar-menu">
-            <li><a href="/index.html" data-i18n="navHome">Home</a></li>
-            <li><a href="/about.html" id="about-link" data-i18n="navAbout">About</a></li>
-            <li><a href="/ai-guide.html" id="ai-guide-link" data-i18n="navAiGuide">AI Guide</a></li>
-            <li><a href="/prompt-engineering.html" id="prompt-engineering-link" data-i18n="navPromptEngineering">Prompt Engineering</a></li>
-            <li><a href="/services.html" id="services-link" data-i18n="navServices">Services</a></li>
-            <li><a href="/faq.html" id="faq-link" data-i18n="navFAQ">FAQ</a></li>
-            <li><a href="/contact.html" id="contact-link" data-i18n="navContact">Contact</a></li>
+            <li><a href="index.html" data-i18n="navHome">首页</a></li>
+            <li><a href="voice.html" data-i18n="navVoiceGen">语音合成</a></li>
+            <li><a href="about.html" data-i18n="navAbout">关于我们</a></li>
+            <li><a href="ai-guide.html" data-i18n="navAIGuide">AI指南</a></li>
+            <li><a href="prompt-engineering.html" data-i18n="navPromptEngineering">提示词工程</a></li>
+            <li><a href="tutorial.html" data-i18n="navTutorial">使用教程</a></li>
+            <li><a href="faq.html" data-i18n="navFAQ">常见问题</a></li>
+            <li><a href="contact.html" data-i18n="navContact">联系我们</a></li>
         </ul>
         <div class="navbar-right">
             <select id="lang-select" class="lang-select">
                 <option value="en">English</option>
                 <option value="zh">中文</option>
             </select>
-            <button class="login-btn" data-i18n="navLogin">登录</button>
+            <button class="login-btn" onclick="showModal('loginModal')" data-i18n="navLogin">登录</button>
         </div>
     </nav>
     <div class="container">
@@ -102,20 +103,27 @@
     <script src="js/i18n.js"></script>
     <script src="js/ui_handler.js" defer></script>
     <script src="js/auth.js" defer></script>
+    <script src="js/auth_modals.js" defer></script>
+    <div id="auth-modals"></div>
     <script>
-        // 基本模态框支持
-        function showModal(message, callback) {
-            if (confirm(message)) {
-                if (callback) callback();
-            }
-        }
-        
-        // 确保页面加载后初始化多语言支持
-        document.addEventListener('DOMContentLoaded', function() {
-            if (window.initializeLanguageSupport) {
-                window.initializeLanguageSupport();
-            }
-        });
+        fetch('auth-modals.html')
+            .then(response => response.text())
+            .then(html => {
+                const mount = document.getElementById('auth-modals');
+                if (mount) mount.innerHTML = html;
+                const ensureBind = () => {
+                    if (window.initAuthForms) {
+                        window.initAuthForms();
+                    } else {
+                        setTimeout(ensureBind, 100);
+                    }
+                };
+                ensureBind();
+                if (typeof setLanguage === 'function' && typeof getCurrentLang === 'function') {
+                    setLanguage(getCurrentLang());
+                }
+            })
+            .catch(error => { console.error('加载认证界面失败:', error); });
     </script>
 </body>
 </html> 
